[Fix] Chat Inbox on Mobile. Bug found by QC

--- a/frontend/web/less/mobile/chat_inbox.less
+++ b/frontend/web/less/mobile/chat_inbox.less
@@ -18,7 +18,6 @@
 	width: 100%;
 	height: 100%;
 	background: rgba(255, 255, 255, 0.9);
-	border-left: solid 5px #5888ac;
 
 	#hide_chat_inbox_btn {
 		position: absolute;
@@ -34,11 +33,12 @@
 	.chat-inbox-tab {
 		background: #ffffff;
 		height: 35px;
+		padding-right: 35px;
 
 		li {
 			margin: 0;
 			border: 0;
-
+			padding: 0;
 			a {
 				border: 0;
 				border-radius: 0;
@@ -108,7 +108,7 @@
 
 			.time-chat-inbox {
 				position: absolute;
-				top: 0;
+				top: 3px;
 				right: 40px;
 				color: #1d1b1b;
 				font-size: 12px;
@@ -128,7 +128,7 @@
 				margin-left: 4px;
 
 				.title-chat-inbox {
-					font-size: 15px;
+					font-size: 16px;
 					font-weight: bold;
 					max-width: 145px;
 					white-space: nowrap;
@@ -147,6 +147,7 @@
 					white-space:nowrap;
 					text-overflow: ellipsis;
 					color: #1d1b1b;
+					font-size: 13px;
 				}
 			}
 
@@ -169,14 +170,14 @@
 		}
 
 		#container_ul_chat_list {
-			height: 700px;
 			ul {
 				margin: 0;
 				padding: 0;
 				overflow: hidden;
+				margin-bottom: 30px;
 				li {
 					list-style-type: none;
-					padding: 10px 5px 10px 10px;
+					padding: 10px 5px 4px 10px;
 					border-bottom: 1px solid #cccccc;
 				}
 
