--- a/frontend/web/less/mobile/chat_post.less
+++ b/frontend/web/less/mobile/chat_post.less
@@ -174,8 +174,8 @@
             height: auto;
             float: left;
             .user_thumbnail{
-                width: 60px;
-                height: 60px;
+                width: 40px;
+                height: 40px;
                 float: right;
                 display: table;
                 .avatar{
@@ -190,8 +190,8 @@
                     img{
                         width: auto;
                         height: auto;
-                        max-width: 60px;
-                        max-height: 60px;
+                        max-width: 40px;
+                        max-height: 40px;
                         margin: auto;
                     }
                 }
